codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_status_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
· Working (0s • esc to interrupt)
  └ This request requires additional safety checks, which can take extra time.


› Ask Codex to do anything

  deepseek-v4-pro default · /tmp/project
