codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_shows_parent_status.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Check recently modified functions for compatibility                           "
"                                                                                "
"  deepseek-v4-pro… Side from main thread · main needs input · Ctrl+C to return  "
